--- a/analyser/package.json
+++ b/analyser/package.json
@@ -6,11 +6,20 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "lint:analyze": "eslint '*/**/*.{js,ts}' --quiet",
+    "lint:fix": "yarn lint:analyze --fix",
+    "lint": "yarn lint:analyze"
   },
   "devDependencies": {
     "@types/node": "^15.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.24.0",
+    "@typescript-eslint/parser": "^4.24.0",
+    "eslint": "^7.26.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "nodemon": "^2.0.7",
+    "prettier": "^2.3.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   }
