--- a/collector/package.json
+++ b/collector/package.json
@@ -4,10 +4,16 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "tail -f /dev/null",
-    "lint": "eslint */**/*.{js,ts}"
+    "build": "tsc",
+    "start": "yarn build && node dist/index.js",
+    "dev": "nodemon",
+    "lint:analyze": "eslint '*/**/*.{js,ts}' --quiet",
+    "lint:fix": "yarn lint:analyze --fix",
+    "lint": "yarn lint:analyze",
+    "test": "jest"
   },
   "devDependencies": {
+    "@types/express": "^4.17.11",
     "@types/jest": "^26.0.23",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
@@ -20,5 +26,10 @@
     "ts-jest": "^26.5.6",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "mongoose": "^5.12.10",
+    "node-nats-streaming": "^0.3.2"
   }
 }
