--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,4 +6,4 @@ services:
     image: protoinct/analyser
     volumes:
       - ./analyser:/usr/src/app
-      - ./analyser/node_modules
+      - /usr/src/app/node_modules
