--- a/collector/package.json
+++ b/collector/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.23",
+    "@types/js-yaml": "^4.0.1",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
     "eslint": "^7.26.0",
@@ -29,6 +30,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "js-yaml": "^4.1.0",
     "mongoose": "^5.12.10",
     "node-nats-streaming": "^0.3.2"
   }
