--- a/analyser/package.json
+++ b/analyser/package.json
@@ -22,5 +22,8 @@
     "prettier": "^2.3.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "node-nats-streaming": "^0.3.2"
   }
 }
