--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,3 +7,10 @@ services:
     volumes:
       - ./analyser:/usr/src/app
       - /usr/src/app/node_modules
+    env_file:
+      - ./analyser/.env
+    depends_on:
+      - broker
+
+  broker:
+    image: nats-streaming:0.21.2-alpine3.13
