--- a/analyser/package.json
+++ b/analyser/package.json
@@ -9,17 +9,22 @@
     "dev": "nodemon",
     "lint:analyze": "eslint '*/**/*.{js,ts}' --quiet",
     "lint:fix": "yarn lint:analyze --fix",
-    "lint": "yarn lint:analyze"
+    "lint": "yarn lint:analyze",
+    "test:dev": "jest --watchAll",
+    "test": "yarn test:dev"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.23",
     "@types/node": "^15.3.0",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "prettier": "^2.3.0",
+    "ts-jest": "^26.5.6",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
