--- a/collector/package.json
+++ b/collector/package.json
@@ -29,6 +29,7 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "express": "^4.17.1",
     "js-yaml": "^4.1.0",
     "mongoose": "^5.12.10",
