--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,6 +54,8 @@
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^21.0.0",
     "ts-jest": "^26.5.4",
-    "vue-jest": "^3.0.4"
+    "vue-class-component": "^7.2.6",
+    "vue-jest": "^3.0.4",
+    "vue-property-decorator": "^9.1.2"
   }
 }
