add neo4j as database for analysis
Signed-off-by: João Daniel <jotaf.daniel@gmail.com>

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,17 @@ services:
       - ./analyser/.env
     depends_on:
       - broker
+      - neo4j
 
   broker:
     image: nats-streaming:0.21.2-alpine3.13
+
+  neo4j:
+    image: neo4j
+    env_file:
+      - ./analyser/.env
+    ports:
+      - 7474:7474
+      - 7687:7687
+    volumes:
+      - ./analyser/neo4j-data:/data
