--- a/collector/package.json
+++ b/collector/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.23",
     "@types/js-yaml": "^4.0.1",
+    "@types/mongodb": "^3.6.18",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
     "eslint": "^7.26.0",
@@ -32,6 +33,7 @@
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "js-yaml": "^4.1.0",
+    "mongodb": "^3.6.9",
     "node-nats-streaming": "^0.3.2"
   }
 }
