--- a/collector/package.json
+++ b/collector/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "dotenv-parse-variables": "^2.0.0",
     "express": "^4.17.1",
     "js-yaml": "^4.1.0",
     "mongoose": "^5.12.10",
